--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,11 +42,25 @@
   margin-top: 30px;
 }
 
-input {
+input, textarea {
   width: 100%;
   padding: 6px 10px;
   border-radius: 5px;
   border: none;
+}
+
+.imgTime {
+  height: 150px;
+}
+
+.submitButton{
+  float: left;
+  border-radius: 10px;
+  margin-right: 5px;
+}
+
+.previewText {
+  text-align: left;
 }
 
 .modal-btn {
