--- a/client/src/App.css
+++ b/client/src/App.css
@@ -54,15 +54,22 @@
   color: #fff;
 }
 
+#brand {
+  margin-bottom: -10px;
+  margin-top: 25px;
+  float: left;
+}
+
 /* =========================================== */
 /* ============== FORM STYLES ================ */
 /* =========================================== */
 
 .form-div {
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 5px;
   height: 440px;
-  padding: 50px;
+  padding: 15px 25px 10px 0;
+  overflow: auto;
 }
 
 .show-grid {
@@ -105,4 +112,9 @@ textarea {
 #submit-btn {
   background-color: #0000ff;
   color: #fff;
+}
+
+ul {
+  list-style: none;
+  text-align: left;
 }
