Formatted client/src files, added comments

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), url(./bikerack.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), url(../img/bikerack.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
